<resources>
    <string name="app_name" translatable="false">JeniusTravel</string>

    <string name="text_login">LOGIN</string>
    <string name="text_username">Username</string>
    <string name="hint_username">Input your username here...</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Input your password here...</string>
    <string name="button_signin">Sign In</string>

    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_travel_list">Travel List</string>

</resources>
